--- a/app/views/cars/_form.html.slim
+++ b/app/views/cars/_form.html.slim
@@ -1,21 +1,21 @@
-= form_for @car do |f|
-  - if @car.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@car.errors.count, "error")} prohibited this car from being saved:"
-      ul
-        - @car.errors.full_messages.each do |message|
-          li = message
-
-  .field
-    = f.label :model
-    = f.text_field :model
-  .field
-    = f.label :year
-    = f.number_field :year
-  .field
-    = f.label :kilometers
-    = f.number_field :kilometers
-  .field
-    = f.label :color
-    = f.text_field :color
-  .actions = f.submit 'Save'
+= form_for @car, :html => { :class => "form-horizontal" } do |f|
+  .form-group
+    = f.label :model, :class => 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :model, :class => 'text_field form-control'
+  .form-group
+    = f.label :year, :class => 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :year, :class => 'text_field form-control'
+  .form-group
+    = f.label :kilometers, :class => 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :kilometers, :class => 'text_field form-control'
+  .form-group
+    = f.label :color, :class => 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :color, :class => 'text_field form-control'
+  .form-group
+    .col-md-offset-2.col-md-10
+      = f.submit nil, :class => 'btn btn-primary'
+      = link_to t('.cancel', :default => t("helpers.links.cancel")), cars_path, :class => 'btn btn-default'
