--- a/app/views/cars/index.html.slim
+++ b/app/views/cars/index.html.slim
@@ -1,27 +1,31 @@
-h1 Listing cars
-
-table
+- model_class = Car
+.page-header
+  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+table.table.table-striped
   thead
     tr
-      th Model
-      th Year
-      th Kilometers
-      th Color
-      th
-      th
-      th
-
+      th= model_class.human_attribute_name(:id)
+      th= model_class.human_attribute_name(:model)
+      th= model_class.human_attribute_name(:year)
+      th= model_class.human_attribute_name(:kilometers)
+      th= model_class.human_attribute_name(:color)
+      th= model_class.human_attribute_name(:created_at)
+      th=t '.actions', :default => t("helpers.actions")
   tbody
     - @cars.each do |car|
       tr
-        td = car.model
-        td = car.year
-        td = car.kilometers
-        td = car.color
-        td = link_to 'Show', car
-        td = link_to 'Edit', edit_car_path(car)
-        td = link_to 'Destroy', car, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td= car.id
+        td= car.model
+        td= car.year
+        td= number_with_delimiter(car.kilometers)
+        td= car.color
+        td=l car.created_at, format: :long
+        td
+          = link_to car_path(car), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do
+            = glyph 'info-sign'
+          = link_to edit_car_path(car), :class => 'btn btn-xs', :title => "#{ t('.edit', :default => t('helpers.links.edit')) }" do
+            = glyph 'pencil'
+          = link_to car_path(car), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }"  do
+            = glyph 'remove'
 
-br
-
-= link_to 'New Car', new_car_path
+= link_to t('.new', :default => t("helpers.links.new")), new_car_path, :class => 'btn btn-primary'
