--- a/app/views/cars/show.html.slim
+++ b/app/views/cars/show.html.slim
@@ -1,18 +1,25 @@
-p#notice = notice
+- model_class = Car
+div class="page-header"
+  h1=t '.title', :default => model_class.model_name.human.titleize
 
-p
-  strong Model:
-  = @car.model
-p
-  strong Year:
-  = @car.year
-p
-  strong Kilometers:
-  = @car.kilometers
-p
-  strong Color:
-  = @car.color
+.fieldset
+  dl
+      dt.label.label-default= model_class.human_attribute_name(:model)
+      dd
+        pre.prettyprint= @car.model
+      dt.label.label-default= model_class.human_attribute_name(:year)
+      dd
+        pre.prettyprint= @car.year
+      dt.label.label-default= model_class.human_attribute_name(:kilometers)
+      dd
+        pre.prettyprint= number_with_delimiter(@car.kilometers)
+      dt.label.label-default= model_class.human_attribute_name(:color)
+      dd
+        pre.prettyprint= @car.color
 
-= link_to 'Edit', edit_car_path(@car)
-'|
-= link_to 'Back', cars_path
+.form-group
+  = link_to t('.back', :default => t("helpers.links.back")), cars_path, :class => 'btn btn-default'
+  '
+  = link_to t('.edit', :default => t("helpers.links.edit")), edit_car_path(@car), :class => 'btn btn-default'
+  '
+  = link_to t('.destroy', :default => t("helpers.links.destroy")), car_path(@car), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
