Implement undo for create and redo for all actions

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,7 +27,7 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#" Cars
+          a.navbar-brand href="#{cars_path}" Cars
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
             li.active= link_to "Index", cars_path
