Change bootstrap theme to amelia

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
 body { padding-top: 70px; }
 @import "bootstrap-sprockets";
+@import 'bootswatch/amelia/variables';
 @import "bootstrap";
+@import "bootswatch/amelia/bootswatch"
