Refactor and edit spec_helper.rb

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,4 +2,4 @@ body { padding-top: 70px; }
 @import "bootstrap-sprockets";
 @import 'bootswatch/amelia/variables';
 @import "bootstrap";
-@import "bootswatch/amelia/bootswatch"
+@import "bootswatch/amelia/bootswatch";
