--- a/app/views/cars/_form.html.slim
+++ b/app/views/cars/_form.html.slim
@@ -1,4 +1,10 @@
 = form_for @car, :html => { :class => "form-horizontal" } do |f|
+  - if @car.errors.any?
+    #error_explanation
+      h2 #{pluralize(@car.errors.count, "error")} prohibited this car from being saved:
+      ul
+        - @car.errors.full_messages.each do |message|
+          li = message
   .form-group
     = f.label :model, :class => 'control-label col-md-2'
     .col-md-10
