--- a/app/views/cars/_form.html.slim
+++ b/app/views/cars/_form.html.slim
@@ -6,6 +6,10 @@
         - @car.errors.full_messages.each do |message|
           li = message
   .form-group
+    = f.label :brand, class: 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :brand, class: 'text_field form-control'
+  .form-group
     = f.label :model, :class => 'control-label col-md-2'
     .col-md-10
       = f.text_field :model, :class => 'text_field form-control'
