--- a/app/views/cars/show.html.slim
+++ b/app/views/cars/show.html.slim
@@ -4,6 +4,9 @@ div class="page-header"
 
 .fieldset
   dl
+      dt.label.label-default= model_class.human_attribute_name(:brand)
+      dd
+        pre.prettyprint= @car.brand
       dt.label.label-default= model_class.human_attribute_name(:model)
       dd
         pre.prettyprint= @car.model
