--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,9 +30,8 @@ html lang="en"
           a.navbar-brand href="#{cars_path}" Cars
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
-            li.active= link_to "Index", cars_path
-            li= link_to "Create car", new_car_path
-            / li= link_to "Link 3", "#"
+            li.active= link_to "Cars", cars_path
+            li= link_to "Drivers", drivers_path
 
     .container
       .row
