--- a/app/views/drivers/index.html.slim
+++ b/app/views/drivers/index.html.slim
@@ -1,19 +1,27 @@
-h1 Listing drivers
-
-table
+- model_class = Driver
+.page-header
+  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+table.table.table-striped
   thead
     tr
-      th
-      th
-      th
-
+      th= model_class.human_attribute_name(:id)
+      th= model_class.human_attribute_name(:name)
+      th= model_class.human_attribute_name(:age)
+      th= model_class.human_attribute_name(:created_at)
+      th=t '.actions', :default => t("helpers.actions")
   tbody
     - @drivers.each do |driver|
       tr
-        td = link_to 'Show', driver
-        td = link_to 'Edit', edit_driver_path(driver)
-        td = link_to 'Destroy', driver, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td= driver.id
+        td= driver.name
+        td= driver.age
+        td=l driver.created_at, format: :long
+        td
+          = link_to driver_path(driver), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do
+            = glyph 'info-sign'
+          = link_to edit_driver_path(driver), :class => 'btn btn-xs', :title => "#{ t('.edit', :default => t('helpers.links.edit')) }" do
+            = glyph 'pencil'
+          = link_to driver_path(driver), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }"  do
+            = glyph 'remove'
 
-br
-
-= link_to 'New Driver', new_driver_path
+= link_to t('.new', :default => t("helpers.links.new")), new_driver_path, :class => 'btn btn-primary'
