--- a/app/views/drivers/show.html.slim
+++ b/app/views/drivers/show.html.slim
@@ -1,6 +1,19 @@
-p#notice = notice
+- model_class = Driver
+div class="page-header"
+  h1=t '.title', :default => model_class.model_name.human.titleize
 
+.fieldset
+  dl
+      dt.label.label-default= model_class.human_attribute_name(:name)
+      dd
+        pre.prettyprint= @driver.name
+      dt.label.label-default= model_class.human_attribute_name(:age)
+      dd
+        pre.prettyprint= @driver.age
 
-= link_to 'Edit', edit_driver_path(@driver)
-'|
-= link_to 'Back', drivers_path
+.form-group
+  = link_to t('.back', :default => t("helpers.links.back")), drivers_path, :class => 'btn btn-default'
+  '
+  = link_to t('.edit', :default => t("helpers.links.edit")), edit_driver_path(@driver), :class => 'btn btn-default'
+  '
+  = link_to t('.destroy', :default => t("helpers.links.destroy")), driver_path(@driver), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
