--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,8 +30,9 @@ html lang="en"
           a.navbar-brand href="#{cars_path}" Cars
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
-            li.active= link_to "Cars", cars_path
+            li= link_to "Cars", cars_path
             li= link_to "Drivers", drivers_path
+            li= link_to 'Driving styles', driving_styles_path
 
     .container
       .row
