--- a/app/views/drivers/_form.html.slim
+++ b/app/views/drivers/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @driver, :html => { :class => "form-horizontal" } do |f|
+= form_for setup_driver(@driver), :html => { :class => "form-horizontal" } do |f|
   .form-group
     = f.label :name, :class => 'control-label col-md-2'
     .col-md-10
@@ -7,6 +7,11 @@
     = f.label :age, :class => 'control-label col-md-2'
     .col-md-10
       = f.text_field :age, :class => 'text_field form-control'
+  .form-group
+    = f.fields_for :driving_style do |ff|
+      = ff.label :style_type, class: 'control-label col-md-2'
+      .col-md-10
+        = ff.text_field :style_type, class: 'text_field form-control'
   .form-group
     .col-md-offset-2.col-md-10
       = f.submit nil, :class => 'btn btn-primary'
