--- a/app/views/cars/_form.html.slim
+++ b/app/views/cars/_form.html.slim
@@ -26,6 +26,10 @@
     .col-md-10
       = f.text_field :color, :class => 'text_field form-control'
   .form-group
+    = f.label :ages, class: 'control-label col-md-2'
+    .col-md-10
+      = f.text_field :ages, value: @car.ages.join(', '), class: 'text_field form-control'
+  .form-group
     .col-md-offset-2.col-md-10
       = f.submit nil, :class => 'btn btn-primary'
       = link_to t('.cancel', :default => t("helpers.links.cancel")), cars_path, :class => 'btn btn-default'
