Remove year and add model_year_month attributes to Car

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,3 +3,4 @@ body { padding-top: 70px; }
 @import 'bootswatch/amelia/variables';
 @import "bootstrap";
 @import "bootswatch/amelia/bootswatch";
+@import 'cars';
