--- a/app/views/cars/index.html.slim
+++ b/app/views/cars/index.html.slim
@@ -19,7 +19,7 @@ table.table.table-striped
         td= car.id
         td= car.brand
         td= car.model
-        td= car.year
+        td= car.model_year_month
         td= number_with_delimiter(car.kilometers)
         td= car.color
         td=l car.created_at, format: :long
