--- a/app/views/cars/_form.html.slim
+++ b/app/views/cars/_form.html.slim
@@ -14,9 +14,14 @@
     .col-md-10
       = f.text_field :model, :class => 'text_field form-control'
   .form-group
-    = f.label :year, :class => 'control-label col-md-2'
+    = f.label :model_year_month, :class => 'control-label col-md-2'
     .col-md-10
-      = f.text_field :year, :class => 'text_field form-control'
+      = f.date_select :model_year_month,
+                      use_two_digit_numbers: true,
+                      order: [:year, :month],
+                      start_year: 1900,
+                      end_year: Date.today.year,
+                      :class => 'text_field form-control'
   .form-group
     = f.label :kilometers, :class => 'control-label col-md-2'
     .col-md-10
